# Минимальная версия
cmake_minimum_required (VERSION 3.16)

#option(NMGPU_USE_CUDA "Use CUDA" ON)

set(NMGPU_NAME newmoderngpu)
#project(${NMGPU_NAME} LANGUAGES CUDA CXX)
project(${NMGPU_NAME})

# Поддержка модулей
# 	модули лежат в папке cmake/
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

################################################################
# Подключение констант с описанием
################################################################
find_package(Description REQUIRED)
message(STATUS "${NMGPU_DESCRIPTION_CONNECT}")

# Вывод логотипа
message(STATUS "${NMGPU_DESCRIPTION_LOGO}")

################################################################
# Подключение констант проекта
################################################################
find_package(Constants REQUIRED)

################################################################
# Подключение библиотек
################################################################
find_package(Lib REQUIRED)

################################################################
# Подключение субпроектов
################################################################
find_package(Src REQUIRED)

################################################################
# Параметры сборки
################################################################
find_package(Build REQUIRED)

################################################################
# Параметры компилятора
################################################################
find_package(Compiler REQUIRED)